keycloak/service-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: eshop
spec:
  selector:
    app: keycloak
  ports:
  - port: 80
    targetPort: 8080
